fixtures/frontend/milestone-1/invalid/pattern_non_exhaustive_sum.aivi
type Status =
  | Paid
  | Pending
  | Failed Text

type Status -> Text
func statusLabel = status => status
 ||> Paid -> "paid"
